@@ -10,12 +10,14 @@ import Editor from 'tinymce/core/api/Editor';
 
 // Note: node.firstChild check is for the 'allow_html_in_named_anchor' setting
 // Only want to add contenteditable attributes if there is no text within the anchor
-const isNamedAnchorNode = (node: Node) => !node.attr('href') && (node.attr('id') || node.attr('name')) && !node.firstChild;
+const isNamedAnchorNode = (node: Node) => node && !node.attr('href') && (node.attr('id') || node.attr('name'));
+const isEmptyNamedAnchorNode = (node: Node) => isNamedAnchorNode(node) && !node.firstChild;
 
 const setContentEditable = (state: string | null) => (nodes: Node[]) => {
   for (let i = 0; i < nodes.length; i++) {
-    if (isNamedAnchorNode(nodes[i])) {
-      nodes[i].attr('contenteditable', state);
+    const node = nodes[i];
+    if (isEmptyNamedAnchorNode(node)) {
+      node.attr('contenteditable', state);
     }
   }
 };
