@@ -1,28 +1,15 @@
-import { Log, Pipeline, Step, UiFinder, Waiter } from '@ephox/agar';
+import { Log, Pipeline, UiFinder, Waiter } from '@ephox/agar';
 import { UnitTest } from '@ephox/bedrock-client';
 import { document } from '@ephox/dom-globals';
 import { TinyApis, TinyLoader, TinyUi } from '@ephox/mcagar';
 import { Element } from '@ephox/sugar';
 import AnchorPlugin from 'tinymce/plugins/anchor/Plugin';
 import Theme from 'tinymce/themes/silver/Theme';
+import { sAddAnchor } from '../module/Helpers';
 
 UnitTest.asynctest('browser.tinymce.plugins.anchor.AnchorAlertTest', (success, failure) => {
   AnchorPlugin();
   Theme();
-
-  const sType = (text: string) =>
-    Log.step('TBA', 'Add anchor id', Step.sync(() => {
-      const elm: any = document.querySelector('div[role="dialog"].tox-dialog  input');
-      elm.value = text;
-    }));
-
-  const sAddAnchor = (tinyUi: TinyUi, id: string) =>
-    Log.stepsAsStep('TBA', 'Add anchor', [
-      tinyUi.sClickOnToolbar('click anchor button', 'button[aria-label="Anchor"]'),
-      tinyUi.sWaitForPopup('wait for window', 'div[role="dialog"].tox-dialog  input'),
-      sType(id),
-      tinyUi.sClickOnUi('click on Save btn', 'div.tox-dialog__footer button.tox-button:not(.tox-button--secondary)')
-    ]);
 
   TinyLoader.setupLight((editor, onSuccess, onFailure) => {
     const tinyUi = TinyUi(editor);
@@ -35,7 +22,7 @@ UnitTest.asynctest('browser.tinymce.plugins.anchor.AnchorAlertTest', (success, f
     Pipeline.async({},
       Log.steps('TINY-2788', 'Anchor: Add anchor with invalid id, check alert appears', [
         tinyApis.sSetContent(''),
-        sAddAnchor(tinyUi, ''),
+        sAddAnchor(tinyApis, tinyUi, ''),
         tinyUi.sWaitForPopup('Wait for alert window', alertDialogSelector),
         tinyUi.sClickOnUi('Click on OK button', 'button.tox-button:contains(OK)'),
         Waiter.sTryUntil('Alert dialog should close', UiFinder.sNotExists(docBody, alertDialogSelector)),
